requette revue plus add pour le linechart